tests/paczka1/fuzzy1/77266982.err
Error in line 9: S883 S122 53,4
Error in line 25: S883 A193 21,0
Error in line 28: pfY2YHwT S122 7,2
Error in line 33: 6M4cL5z9Oop S122 13,4
